# SimpleLoginRESTfulAPI

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
html/: app.js  index.html
html/app-services/: authentication.service.js  user.service.local-storage.js
html/login/: login.view.html
html/system/: file.upload.controller.js  file.upload.html  file_upload.html  system.controller.js  system.view.html
msvc/2015/: SimpleLoginRESTfulAPI.sln  SimpleLoginRESTfulAPI.vcxproj  SimpleLoginRESTfulAPI.vcxproj.filters
src/: Definitions.h  SimpleLoginRESTfulApi.cpp  SimpleLoginRESTfulApi.h  main.cpp
src/fake_device/: fake_device.cpp  fake_device.h
src/md5/: md5.cpp  md5.h
